[gd_scene load_steps=2 format=3 uid="uid://bq45ucvgv7trw"]

[ext_resource type="Script" uid="uid://dl07fxx4yxw8d" path="res://scenes/util/speed.gd" id="1_lvr3c"]

[node name="Speed" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -259.0
offset_top = -40.0
offset_right = -9.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_lvr3c")

[node name="SpeedBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="SpeedLabel" type="Label" parent="SpeedBox"]
layout_mode = 2
text = "Speed"

[node name="SpeedControl" type="HSlider" parent="SpeedBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.5
max_value = 4.0
step = 0.5
value = 1.0

[node name="SpeedValue" type="Label" parent="SpeedBox"]
unique_name_in_owner = true
layout_mode = 2
text = "x1.0"

[connection signal="value_changed" from="SpeedBox/SpeedControl" to="." method="_on_speed_control_value_changed"]
